@@ -108,6 +108,8 @@
 63. If we change a genre in the tag-editor, then update genre list in views.
 64. Disable connections menu when preferences dialog is open.
 65. Allow wildcard genres. e.g. 'Rock*' for 'Hard Rock' and 'RockNRoll'
+66. Handle multiple storage locations on MTP devices.
+67. Fix creation of music folder on MTP devices.
 
 0.9.2
 -----
